crates/flux-codegen-kotlin/tests/snapshots/pipeline__pipeline_b3_1_counter.snap
---
source: crates/flux-codegen-kotlin/tests/pipeline.rs
expression: "codegen_example(name, src)"
---
package dev.flux.app

import androidx.compose.animation.core.*
import androidx.compose.foundation.Image
import androidx.compose.foundation.layout.*
import androidx.compose.foundation.lazy.*
import androidx.compose.foundation.shape.RoundedCornerShape
import androidx.compose.foundation.text.KeyboardActions
import androidx.compose.foundation.text.KeyboardOptions
import androidx.compose.material3.*
import androidx.compose.material3.Button
import androidx.compose.material3.Text
import androidx.compose.runtime.*
import androidx.compose.ui.Alignment
import androidx.compose.ui.Modifier
import androidx.compose.ui.graphics.Color
import androidx.compose.ui.res.painterResource
import androidx.compose.ui.text.input.KeyboardType
import androidx.compose.ui.unit.dp
import androidx.compose.ui.unit.sp
import androidx.navigation.NavHostController
import androidx.navigation.compose.NavHost
import androidx.navigation.compose.composable
import androidx.navigation.compose.rememberNavController
import kotlinx.coroutines.GlobalScope
import kotlinx.coroutines.launch

object FluxTheme {
    val colorPrimary = Color(0xFF6750A4)
    val colorSecondary = Color(0xFF625B71)
    val colorSurface = Color(0xFFFEF7FF)
    val spaceSm = 4.dp
    val spaceMd = 8.dp
    val spaceLg = 16.dp
    val textBody = 17.sp
    val textTitle = 28.sp
}

@Composable fun Counter(
) {
    var count by remember { mutableStateOf<Int>(0) }
    Column {
        Text("Count: ${count}")
        Button(onClick = { count = (count + 1) }) {
            Text("Increment")
        }
    }
}
